sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: not found: value l
    var compa:Int=getValeur(l)
                            ^AlgInsertionSort:8: error: not found: value l
    while (compa>stock || l>=0){
                          ^AlgInsertionSort:9: error: not found: value l
      setValeur((l+1),compa)
                 ^AlgInsertionSort:10: error: not found: value l
      compteur=l
               ^AlgInsertionSort:13: error: not found: value compteur
  setValeur(compteur,stock)
            ^AlgInsertionSort:13: error: not found: value stock
  setValeur(compteur,stock)
                     ^